updated Decorator